--- a/infrastructure/api-gateway/pom.xml
+++ b/infrastructure/api-gateway/pom.xml
@@ -19,6 +19,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.projectreactor</groupId>
