--- a/business-domain/inventory-service/src/main/resources/application.yml
+++ b/business-domain/inventory-service/src/main/resources/application.yml
@@ -23,8 +23,10 @@ logging:
 
 # Eureka client
 eureka:
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-  instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
