--- a/infrastructure/api-gateway/src/main/resources/application.yml
+++ b/infrastructure/api-gateway/src/main/resources/application.yml
@@ -35,3 +35,10 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+# Log
+logging:
+  level:
+    root: info
+    org.springframework.cloud.gateway: trace
+    org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: info
