--- a/compose.yml
+++ b/compose.yml
@@ -39,3 +39,38 @@ services:
       - 5434:5432
     expose:
       - 5434
+  ### PostgreSQL database for Keycloak
+  db-keycloak:
+    container_name: db-keycloak
+    image: postgres:15.2-alpine
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: db_keycloak
+      POSTGRES_USER: magadiflo
+      POSTGRES_PASSWORD: magadiflo
+    ports:
+      - 5435:5432
+    expose:
+      - 5435
+  ### Keycloak
+  keycloak:
+    container_name: keycloak
+    image: quay.io/keycloak/keycloak:21.0.2
+    restart: unless-stopped
+    command: ["start-dev"]
+    ports:
+      - 8181:8080
+    expose:
+      - 8181
+    depends_on:
+      - db-keycloak
+    environment:
+      DB_VENDOR: POSTGRES
+      DB_ADDR: db-keycloak
+      DB_DATABASE: db_keycloak
+      DB_PORT: 5435
+      DB_USER: magadiflo
+      DB_PASSWORD: magadiflo
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_HTTP_PORT: 8080
