Nuevas dependencias: actuator, oauth2-client, oauth2-resource-server

--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -20,4 +20,11 @@
         <module>discovery-server</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
