--- a/infrastructure/api-gateway/src/main/resources/application.yml
+++ b/infrastructure/api-gateway/src/main/resources/application.yml
@@ -55,7 +55,7 @@ spring:
             client-id: microservices_client
             client-secret: HAVz0radwfOEsapxT5e8GdvckcOlFgD6
             authorization-grant-type: authorization_code
-            redirect-uri: { baseUrl }/login/oauth2/code/keycloak
+            redirect-uri: http://localhost:8080/login/oauth2/code/keycloak
         provider:
           keycloak:
             issuer-uri: http://localhost:8181/realms/microservices-realm
