--- a/business-domain/inventory-service/src/main/resources/application.yml
+++ b/business-domain/inventory-service/src/main/resources/application.yml
@@ -37,3 +37,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka:password@localhost:8761/eureka/
+
+# Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+      base-path: /actuator/inventory
