--- a/business-domain/orders-service/src/main/resources/application.yml
+++ b/business-domain/orders-service/src/main/resources/application.yml
@@ -37,3 +37,29 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka:password@localhost:8761/eureka/
+
+# Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+      base-path: /actuator/orders
+  endpoint:
+    health:
+      show-details: always
+  health:
+    circuitbreakers:
+      enabled: true
+
+# Resilience4j - Circuit Breaker
+resilience4j.circuitbreaker:
+  instances:
+    orders-service:
+      register-health-indicator: true
+      sliding-window-size: 5
+      sliding-window-type: count_based
+      failure-rate-threshold: 50
+      wait-duration-in-open-state: 10s
+      automatic-transition-from-open-to-half-open-enabled: true
+      permitted-number-of-calls-in-half-open-state: 3
