--- a/infrastructure/api-gateway/src/main/resources/application.yml
+++ b/infrastructure/api-gateway/src/main/resources/application.yml
@@ -40,6 +40,24 @@ spring:
           predicates:
             - Path=/eureka/**
 
+        # Inventory actuator routes
+        - id: inventory-service-actuator-route
+          uri: lb://inventory-service/actuator/inventory/**
+          predicates:
+            - Path=/actuator/inventory/**
+
+        # Orders actuator routes
+        - id: orders-service-actuator-route
+          uri: lb://orders-service/actuator/orders/**
+          predicates:
+            - Path=/actuator/orders/**
+
+        # Products actuator routes
+        - id: products-service-actuator-route
+          uri: lb://products-service/actuator/products/**
+          predicates:
+            - Path=/actuator/products/**
+
       default-filters:
         - SaveSession
         - TokenRelay
@@ -76,3 +94,11 @@ logging:
     root: info
     org.springframework.cloud.gateway: trace
     org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: info
+
+# Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+      base-path: /actuator
