--- a/infrastructure/api-gateway/src/main/resources/application.yml
+++ b/infrastructure/api-gateway/src/main/resources/application.yml
@@ -90,6 +90,8 @@ eureka:
 
 # Log
 logging:
+  pattern:
+    level: '%5p [${spring.application.name}, %X{traceId:-}, %X{spanId:-}]'
   level:
     root: info
     org.springframework.cloud.gateway: trace
@@ -102,3 +104,10 @@ management:
       exposure:
         include: health
       base-path: /actuator
+  # Tracing
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
