--- a/business-domain/products-service/src/main/resources/application.yml
+++ b/business-domain/products-service/src/main/resources/application.yml
@@ -23,9 +23,12 @@ spring:
       resourceserver:
         jwt:
           jwk-set-uri: http://localhost:8181/realms/microservices-realm/protocol/openid-connect/certs
-
+# Log
 logging:
+  pattern:
+    level: '%5p [${spring.application.name}, %X{traceId:-}, %X{spanId:-}]'
   level:
+    root: debug
     org.hibernate.SQL: debug
 
 # Eureka client
@@ -45,3 +48,10 @@ management:
       exposure:
         include: health
       base-path: /actuator/products
+  # Tracing
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
