--- a/infrastructure/discovery-server/src/main/resources/application.yml
+++ b/infrastructure/discovery-server/src/main/resources/application.yml
@@ -22,6 +22,17 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
 logging:
+  pattern:
+    level: '%5p [${spring.application.name}, %X{traceId:-}, %X{spanId:-}]'
   level:
     org.springframework.web: debug
     org.springframework.security: debug
+
+# Tracing
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
