--- a/compose.yml
+++ b/compose.yml
@@ -103,3 +103,11 @@ services:
     image: openzipkin/zipkin:2.24.2
     ports:
       - 9411:9411
+  ### Prometheus
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus:v2.46.0
+    ports:
+      - 9090:9090
+    volumes:
+      - ./files/prometheus.yml:/etc/prometheus/prometheus.yml
