Configurando métricas de prometheus en cada microservicio

--- a/infrastructure/discovery-server/src/main/resources/application.yml
+++ b/infrastructure/discovery-server/src/main/resources/application.yml
@@ -28,8 +28,14 @@ logging:
     org.springframework.web: debug
     org.springframework.security: debug
 
-# Tracing
+# Actuator
 management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus
+      base-path: /actuator/discovery
+  # Tracing
   tracing:
     sampling:
       probability: 1.0
