--- a/business-domain/orders-service/src/main/resources/application.yml
+++ b/business-domain/orders-service/src/main/resources/application.yml
@@ -54,7 +54,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health
+        include: health,prometheus
       base-path: /actuator/orders
   endpoint:
     health:
