--- a/infrastructure/api-gateway/src/main/resources/application.yml
+++ b/infrastructure/api-gateway/src/main/resources/application.yml
@@ -40,6 +40,7 @@ spring:
           predicates:
             - Path=/eureka/**
 
+        ###### Actuator Routes ######
         # Inventory actuator routes
         - id: inventory-service-actuator-route
           uri: lb://inventory-service/actuator/inventory/**
@@ -57,6 +58,12 @@ spring:
           uri: lb://products-service/actuator/products/**
           predicates:
             - Path=/actuator/products/**
+
+        # Discovery actuator routes
+        - id: discovery-service-actuator-route
+          uri: http://localhost:8761/actuator/discovery/**
+          predicates:
+            - Path=/actuator/discovery/**
 
       default-filters:
         - SaveSession
@@ -102,7 +109,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health
+        include: health,prometheus
       base-path: /actuator
   # Tracing
   tracing:
